Fixed ContentNavigation Filter Item checkmark alignment

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -253,11 +253,15 @@
 					cursor : pointer;
 
 					.cn-library-item, .cn-filter-item, .cn-sort-item, .cn-custom-category-item, .cn-uuv-category-item {
-						width   : 100%;
-						padding : 5px 10px;
+						width    : 100%;
+						padding  : 5px 10px;
+						position : relative;
 					}
 
 					.cn-filter-tick {
+						position     : absolute;
+						top          : 50%;
+						margin-top   : -7px;
 						margin-right : 5px;
 						padding      : 0px 7px;
 						display      : inline-block;
@@ -268,12 +272,11 @@
 					}
 
 					.cn-filter-item-title {
-						width   : ~"calc( 100% - 19px )";
-						width   : ~"-moz-calc( 100% - 19px )";
-						width   : ~"-webkit-calc( 100% - 19px )";
-						width   : ~"-ms-calc( 100% - 19px )";
-						width   : ~"-o-calc( 100% - 19px )";
-						display : inline-block;
+						width         : 100%;
+						margin-left   : 19px;
+						margin-right  : -19px;
+						padding-right : 19px;
+						display       : inline-block;
 					}
 
 					&.selected:not( .cn-custom-library ) {
